--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,53 +15,78 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Custom Script
+        id: run_custom_script
         run: |
           chmod +x count_severity.sh
           ./count_severity.sh  > result.json
           cat result.json
 
       - name: Generate HTML Summary
+        id: generate_html_summary
         if: always()
         uses: actions/github-script@v6
-        with: 
+        with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-                 const fs = require('fs');
-                 const path = require('path');
+            const fs = require('fs');
+            const path = require('path');
 
-                        // Read the JSON data from result.json
-                 const resultData = fs.readFileSync('result.json', 'utf8');
-                 const jsonData = JSON.parse(resultData);
+            // Read the JSON data from result.json
+            const resultData = fs.readFileSync('result.json', 'utf8');
+            const jsonData = JSON.parse(resultData);
 
-                     // Generate the HTML content
-                   let tableRows = '';
-                  for (const item of jsonData.SeverityCount) {
-                  tableRows += `<tr><td>${item.severity}</td><td>${item.count}</td></tr>`;
-                   }
+            // Generate the HTML content
+            let tableRows = '';
+            for (const item of jsonData.SeverityCount) {
+              tableRows += `<tr><td>${item.severity}</td><td>${item.count}</td></tr>`;
+            }
 
-                 const htmlContent = `
-                 <html>
-                   <body>
-                    <table border='1'>
-                     <thead>
-                       <tr>
+            const htmlContent = `
+              <html>
+                <body>
+                  <table border='1'>
+                    <thead>
+                      <tr>
                         <th>Severity</th>
-                       <th>Count</th>
-                         </tr>
-                      </thead>
-                     <tbody>
+                        <th>Count</th>
+                      </tr>
+                    </thead>
+                    <tbody>
                       ${tableRows}
-                      </tbody>
-                   </table>
+                    </tbody>
+                  </table>
                   <p>Trafficlight: ${jsonData.Trafficlight}</p>
-                    </body>
-                      </html>
-                 `;
+                </body>
+              </html>
+            `;
 
-                  // Write the HTML content to summary.html
-                 fs.writeFileSync(path.join(process.env.GITHUB_WORKSPACE, 'summary.html'), htmlContent);
-
-
+            // Write the HTML content to summary.html
+            fs.writeFileSync(path.join(process.env.GITHUB_WORKSPACE, 'summary.html'), htmlContent);
 
       - name: Display
         run: cat $GITHUB_WORKSPACE/summary.html >> $GITHUB_STEP_SUMMARY
+
+      - name: Report Checks Status
+        if: always()
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { context, github } = require('@actions/github');
+            const fs = require('fs');
+
+            const summary = fs.readFileSync('summary.html', 'utf8');
+            const checkName = 'Workflow Results';
+
+            await github.checks.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: checkName,
+              head_sha: context.payload.pull_request.head.sha,
+              status: 'completed',
+              conclusion: 'success', // or 'failure' if applicable
+              output: {
+                title: 'Workflow Results',
+                summary: summary,
+              },
+            });
