--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,8 @@
 name: Count Severity
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  #pull_request:
+    #types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 
