--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,11 +1,10 @@
-name: Count Severity on PR
-
+name: Update Pull Request Description
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
-  count_severity:
+  update_pull_request_description:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,7 +14,7 @@ jobs:
       - name: Run Custom Script
         run: |
           chmod +x count_severity.sh
-          ./count_severity.sh  > result.json
+          ./count_severity.sh > result.json
           cat result.json
 
       - name: Generate HTML Summary
@@ -37,11 +36,15 @@ jobs:
           script: |
             const fs = require('fs');
             const summaryHtml = fs.readFileSync('./summary.html', 'utf8');
-            const { owner, repo, issue_number } = context.issue;
-            
-               await github.issues.createComment({
-              owner: "neha123f",
-              repo: "jtest",
-              issue_number: issue.number,
-              body: `<!--HTML_COMMENT_START-->\n${summaryHtml}\n<!--HTML_COMMENT_END-->`,
-            });
+            const { owner, repo, number } = context.issue;
+
+            try {
+              await github.issues.createComment({
+                owner: owner,
+                repo: repo,
+                issue_number: number,
+                body: `<!--HTML_COMMENT_START-->\n${summaryHtml}\n<!--HTML_COMMENT_END-->`,
+              });
+            } catch (error) {
+              console.error(error.message);
+            }
