--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,7 +1,7 @@
 name: Update Pull Request Description
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+on: workflow_dispatch
+  #pull_request:
+   # types: [opened, synchronize, reopened]
 
 jobs:
   update_pull_request_description:
