--- a/.github/workflows/sto.yaml
+++ b/.github/workflows/sto.yaml
@@ -2,8 +2,8 @@ on:
   # Trigger the workflow on push or pull request
   pull_request:
     branches:
-      - master
-      - develop
+      - main
+      - dev
 
 jobs:
   comment:
