--- a/.github/workflows/sto.yaml
+++ b/.github/workflows/sto.yaml
@@ -1,9 +1,9 @@
-on:
+on: workflow_dispatch
   # Trigger the workflow on push or pull request
-  pull_request:
-    branches:
-      - main
-      - dev
+  #pull_request:
+   # branches:
+      #- main
+      #- dev
 
 jobs:
   comment:
