--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -14,4 +14,4 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          file: index.html # The folder the action should deploy.
+          folder: web # The folder the action should deploy.
