--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -27,4 +27,4 @@ jobs:
        uses: JamesIves/github-pages-deploy-action@v4
        with:
           folder: web # The folder the action should deploy.
-          branch: gh-pages
+          branch: dev
