--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -9,6 +9,8 @@ jobs:
     steps:
      - name: repo checkout
        uses: actions/checkout@v2
+       with:
+        ref: dev
 
         
      - name: Update Build Number
