--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -25,8 +25,9 @@ jobs:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
-     - name: Deploy 🚀
-       uses: JamesIves/github-pages-deploy-action@v4
+     - name: Deploy to GitHub Pages
+       id: deployment
+       uses: actions/deploy-pages@v2
        with:
-          folder: web # The folder the action should deploy.
-          branch: dev
+        access-token: ${{ secrets.GITHUB_TOKEN }}
+        publish-dir: web/index.html
