--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -22,7 +22,7 @@ jobs:
           git commit -am "Update build number to $LATEST_COMMIT_SHA"
           git push origin dev
        env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           GITHUB_TOKEN: ${{ secrets.DD_token }}
 
 
      - name: Deploy to GitHub Pages
