--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -1,33 +1,34 @@
 name: Build and Deploy
-on: workflow_dispatch
+on:
+  workflow_dispatch
 permissions:
   contents: write
+  id-token: write
 jobs:
   build-and-deploy:
- 
     runs-on: ubuntu-latest
     steps:
-     - name: repo checkout
-       uses: actions/checkout@v2
-       with:
+    - name: repo checkout
+      uses: actions/checkout@v2
+      with:
         ref: dev
 
-        
-     - name: Update Build Number
-       run: |
-          LATEST_BUILD_NUM=${{github.run_number}}
-          sed -i "s/Latest Build number:.*\/p>/Latest Build number: $LATEST_BUILD_NUM<\/p>/g" web/index.html
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git commit -am "Update build number to $LATEST_COMMIT_SHA"
-          git push origin dev
-       env:
-           GITHUB_TOKEN: ${{ secrets.DD_token }}
+    - name: Update Build Number
+      run: |
+        LATEST_BUILD_NUM=${{ github.run_number }}
+        sed -i "s/Latest Build number:.*<\/p>/Latest Build number: $LATEST_BUILD_NUM<\/p>/g" web/index.html
+        git config --global user.email "github-actions@github.com"
+        git config --global user.name "GitHub Actions"
+        git add web/index.html
+        git commit -m "Update build number to $LATEST_BUILD_NUM"
+        git push origin dev
+      env:
+        GITHUB_TOKEN: ${{ secrets.DD_token }}
 
+    - name: Deploy to GitHub Pages
+      id: deployment
 
-     - name: Deploy to GitHub Pages
-       id: deployment
-       uses: actions/deploy-pages@v2
-       with:
+      uses: actions/deploy-pages@v2
+      with:
         token: ${{ secrets.DD_token }}
         publish-dir: web/index.html
