--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -35,12 +35,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: updated-html
-
-    - name: Create Directory
-      run: mkdir -p public
-
-    - name: Move Artifact to Deployment Directory
-      run: mv updated-html public/index.html
+        path: public
 
     - name: Deploy to GitHub Pages
       id: deployment
