--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -12,9 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build
-        # Add your build steps here
-        # ...
+      - name: Update Build Number
+        run: |
+          LATEST_BUILD_NUM=${{github.run_number}}
+          sed -i "s/Latest Build number:.*\/p>/Latest Build number: $LATEST_BUILD_NUM<\/p>/g" web/index.html
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git commit -am "Update build number to $LATEST_COMMIT_SHA"
+          git push origin dev
+        env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
