--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+         ref: dev
 
       - name: Update Build Number
         run: |
