--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -12,6 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
+         token: ${{ secrets.DD_token }}
          ref: dev
 
       - name: Update Build Number
