--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: updated-html
+          name: github-pages
           path: web/index.html
 
   # Deploy job
@@ -49,7 +49,7 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
-          name: updated-html
+          name: github-pages
           path: public
 
       - name: Deploy to GitHub Pages
