--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -46,6 +46,11 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+         token: ${{ secrets.DD_token }}
+         ref: dev
       - name: Checkout dev branch
         run: git checkout dev
 
