--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,7 +31,7 @@ jobs:
      - name: repo checkout
        uses: actions/checkout@v2
        with:
-        token: ${{ secrets.CI_TOKEN }}
+        token: ${{ secrets.DD_token }}
         ref: dev
         
      - name: Update Build Number
