--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,12 +1,10 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy updated index.html to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
-
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # Runs on pushes targeting the "dev" branch
+  push:
+    branches:
+      - dev
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -21,36 +19,40 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
+  # Deploy job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-     - name: repo checkout
-       uses: actions/checkout@v2
-       with:
-        token: ${{ secrets.DD_token }}
-        ref: dev
-        
-     - name: Update Build Number
-       run: |
-          LATEST_BUILD_NUM=${{github.run_number}}
-          sed -i "s/Latest Build number:.*\/p>/Latest Build number: $LATEST_BUILD_NUM<\/p>/g" web/index.html
+      - name: Checkout dev branch
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.DD_token }}
+          ref: dev
+
+      - name: Update Build Number
+        run: |
+          LATEST_BUILD_NUM=${{ github.run_number }}
+          sed -i "s/Latest Build number:.*<\/p>/Latest Build number: $LATEST_BUILD_NUM<\/p>/" web/index.html
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
-          git commit -am "Update build number to $LATEST_COMMIT_SHA"
+          git add web/index.html
+          git commit -m "Update build number to $LATEST_BUILD_NUM"
           git push origin dev
-       env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-     - name: Setup Pages
-       uses: actions/configure-pages@v3
-     - name: Upload artifact
-       uses: actions/upload-pages-artifact@v2
-       with:
-          # Upload entire repository
-          path: '.'
-     - name: Deploy to GitHub Pages
-       id: deployment
-       uses: actions/deploy-pages@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          # Upload the modified index.html file
+          path: 'web/index.html'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
