--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -48,8 +48,12 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload the modified index.html file
-          path: 'web/index.html'
+             path: 'web'  # Specify the directory that contains index.html
+             name: github-pages
+             retention-days: 1
+        env:
+           GITHUB_PAGES: true
+
 
       - name: Deploy to GitHub Pages
         id: deployment
